# igiuguiu

./: .gitignore  .travis.yml  Cargo.toml  README.md  TODO.md
src/: lib.rs
src/basic_fn/: compose.rs  filter.rs  fold.rs  fun.rs  list.rs  mac.rs  map.rs  mod.rs  pipe.rs  sum.rs
tests/: basic_fn.rs
