[package]
name = "kaguya_rs"
description = "Functional Programming tools and ADTs"
version = "0.1.5"
authors = ["FGO <fgoinai@gmail.com>"]

homepage = "https://github.com/fgoinai/KaguyaRs"
repository = "https://github.com/fgoinai/KaguyaRs"
documentation = "https://docs.rs/kaguya_rs"
readme = "README.md"

keywords = [
    "functional",
    "functions",
    "ADT",
    "Kaguya"
]

license = "Apache-2.0"

[badges]
travis-ci = { repository = "fgoinai/KaguyaRs", branch = "master" }

[dependencies]
