[package]
name = "pa"
description = "Functional Programming tools and ADTs"
version = "0.1.5"
authors = ["FGO <fgoinai@gmail.com>"]

homepage = "https://github.com/yuulive/pa"
repository = "https://github.com/yuulive/pa"
documentation = "https://docs.rs/pa"
readme = "README.md"

keywords = [
    "functional",
    "functions",
    "ADT",
    "Kaguya"
]

license = "Apache-2.0"

[badges]
travis-ci = { repository = "fgoinai/KaguyaRs", branch = "master" }

[dependencies]
